--- a/WebContent/employeeview.html
+++ b/WebContent/employeeview.html
@@ -36,7 +36,7 @@
 						<i class="fa fa-floppy-o">Save</i>
 					</button></td>
 
-				<td><button class="btn btn-danger" ng-click="remove(e)">
+				<td><button class="button btn-danger" ng-click="remove(e)">
 						<i class="fa fa-times">Delete</i>
 					</button></td>
 			</tr>
